Reduce button and footer sizes

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     background: var(--white);
     font-size: 1rem;
     font-family: 'TextFont', 'Courier New', Courier, monospace;
+    margin: 0;
 }
 
 img {
@@ -123,7 +124,7 @@ li {
 
 .menu_btn {
     background: transparent;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     padding: 0.5rem;
     border: 1px solid var(--black);
 }
@@ -210,26 +211,28 @@ h2 {
 }
 
 form {
-    padding: 0 0.8rem;
+    padding: 0 1rem;
 }
 
 form div {
     display: flex;
-    flex-wrap: wrap;
-    gap: 0.5rem;
-    align-items: flex-end;
-    justify-content: center;
+    gap: 3rem;
+    flex-direction: column;
 }
 
 .submit_btn {
-    font-size: 1.4rem;
-    flex-grow: 0.1;
-    padding: 1rem 1.5rem;
+    font-size: 1.2rem;
+    padding: 1rem 1.8rem;
     background: transparent;
     border: 1px solid var(--neutral);
     color: var(--white);
+    flex-grow: 0.1;
     /* for large screens */
     /* padding:1.3rem 0 */
+}
+
+.submit_btn:hover {
+    cursor: pointer;
 }
 
 .subscribe_section>h2+div {
@@ -247,8 +250,8 @@ input {
     font-size: 1.2rem;
     background: transparent;
     color: inherit;
-    flex-grow: 0.4;
     border-bottom: 1px solid var(--neutral);
+    flex-grow: 0.2;
 }
 
 footer {
@@ -260,9 +263,13 @@ footer {
 footer p {
     padding-left: 1.2rem;
     margin: 0;
+    font-size: 0.9rem;
 }
 
 @media screen and (min-width:500px) {
+    form {
+        padding: 0;
+    }
 
     h1>span,
     .artist_image {
@@ -272,6 +279,12 @@ footer p {
     footer p {
         padding: 0;
         text-align: center;
+    }
+
+    form div {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
 }
 
