--- a/style.css
+++ b/style.css
@@ -193,6 +193,9 @@ h2 {
     margin-bottom: 6rem;
 }
 
+.about_section .about_content:nth-of-type(2) {
+    margin-top: 1.5rem;
+}
 
 .video_section div {
     display: flex;
@@ -327,6 +330,7 @@ footer p {
 
     .about_content {
         padding: 0;
+        font-size: 1.2rem;
     }
 
     .menu_btn {
@@ -386,6 +390,6 @@ footer p {
     }
 
     .main_nav a {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 }
