--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ header {
 
 a {
     text-decoration: none;
+
 }
 
 .white_text {
@@ -164,8 +165,7 @@ h2 {
 }
 
 .music_section ul {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 1rem;
     padding: 0;
 }
@@ -289,6 +289,15 @@ footer p {
         align-items: center;
         justify-content: center;
     }
+
+    .music_section ul {
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        width: fit-content;
+        margin: 0 auto;
+        column-gap: 2.8rem;
+        row-gap: 2rem;
+    }
 }
 
 @media screen and (min-width:1000px) {
@@ -297,7 +306,7 @@ footer p {
     }
 
     .listen {
-        padding: 1.1rem 2.5rem;
+        padding: 0.9rem 2.5rem;
     }
 
     .hero_section {
@@ -320,8 +329,7 @@ footer p {
     }
 
     .music_section ul {
-        flex-direction: row;
-        justify-content: center;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 
     .music_platform a {
